tests/knowledge/context/aws/scenarios/cross_version/vpc_endpoint/vpc-endpoint-eni/cfn-account-data/cloudrail-developer-idan/us-east-1/cloudformation-list-stacks.json
{
    "StackSummaries": [
        {
            "CreationTime": "2021-10-05T08:01:13.243000+00:00",
            "DeletionTime": "2021-10-05T12:54:08.292000+00:00",
            "DriftInformation": {
                "StackDriftStatus": "NOT_CHECKED"
            },
            "StackId": "arn:aws:cloudformation:us-east-1:769993059587:stack/nat-gateway-without-allocation-id-dorona/689d52f0-25b2-11ec-8434-0a7c76781505",
            "StackName": "nat-gateway-without-allocation-id-dorona",
            "StackStatus": "DELETE_COMPLETE"
        },
        {
            "CreationTime": "2021-10-05T07:53:32.276000+00:00",
            "DeletionTime": "2021-10-05T07:58:00.207000+00:00",
            "DriftInformation": {
                "StackDriftStatus": "NOT_CHECKED"
            },
            "StackId": "arn:aws:cloudformation:us-east-1:769993059587:stack/nat-gateway-without-allocation-id-dorona/55da6d20-25b1-11ec-b10b-0e62b5329e35",
            "StackName": "nat-gateway-without-allocation-id-dorona",
            "StackStatus": "DELETE_COMPLETE"
        },
        {
            "CreationTime": "2021-10-04T08:07:35.623000+00:00",
            "DeletionTime": "2021-10-19T08:06:53.867000+00:00",
            "DriftInformation": {
                "StackDriftStatus": "NOT_CHECKED"
            },
            "StackId": "arn:aws:cloudformation:us-east-1:769993059587:stack/idan-physical-id-testing/221e48c0-24ea-11ec-850b-0a5c3599acc1",
            "StackName": "idan-physical-id-testing",
            "StackStatus": "DELETE_COMPLETE"
        },
        {
            "CreationTime": "2021-09-30T07:16:27.395000+00:00",
            "DeletionTime": "2021-10-05T07:58:19.873000+00:00",
            "DriftInformation": {
                "StackDriftStatus": "NOT_CHECKED"
            },
            "StackId": "arn:aws:cloudformation:us-east-1:769993059587:stack/nat-gateways-dorona/53a8d880-21be-11ec-a4cb-0e232268861f",
            "StackName": "nat-gateways-dorona",
            "StackStatus": "DELETE_COMPLETE"
        },
        {
            "CreationTime": "2021-07-07T13:42:08.159000+00:00",
            "DeletionTime": "2021-10-19T08:07:09.613000+00:00",
            "DriftInformation": {
                "StackDriftStatus": "NOT_CHECKED"
            },
            "StackId": "arn:aws:cloudformation:us-east-1:769993059587:stack/demoCfnTemplate/1f875c70-df29-11eb-9121-12b94cd95a93",
            "StackName": "demoCfnTemplate",
            "StackStatus": "DELETE_COMPLETE"
        },
        {
            "CreationTime": "2021-06-20T03:40:06.324000+00:00",
            "DriftInformation": {
                "StackDriftStatus": "NOT_CHECKED"
            },
            "LastUpdatedTime": "2021-10-19T08:14:45.526000+00:00",
            "StackId": "arn:aws:cloudformation:us-east-1:769993059587:stack/testCfnStack/34368b90-d179-11eb-af6a-1249719cb5f1",
            "StackName": "testCfnStack",
            "StackStatus": "UPDATE_COMPLETE"
        },
        {
            "CreationTime": "2021-01-27T08:30:50.041000+00:00",
            "DriftInformation": {
                "StackDriftStatus": "NOT_CHECKED"
            },
            "StackId": "arn:aws:cloudformation:us-east-1:769993059587:stack/cloudrail-integration-idan/f5f1dcb0-6079-11eb-b8cd-0addedaaaadd",
            "StackName": "cloudrail-integration-idan",
            "StackStatus": "CREATE_COMPLETE"
        },
        {
            "CreationTime": "2021-01-07T20:02:39.967000+00:00",
            "DriftInformation": {
                "StackDriftStatus": "NOT_CHECKED"
            },
            "StackId": "arn:aws:cloudformation:us-east-1:769993059587:stack/cloudrail-integration-v4/4b8eff60-5123-11eb-bb50-0e709ff1c6b9",
            "StackName": "cloudrail-integration-v4",
            "StackStatus": "CREATE_COMPLETE"
        },
        {
            "CreationTime": "2021-01-06T12:11:01.948000+00:00",
            "DeletionTime": "2021-01-06T12:11:09.182000+00:00",
            "DriftInformation": {
                "StackDriftStatus": "NOT_CHECKED"
            },
            "StackId": "arn:aws:cloudformation:us-east-1:769993059587:stack/cloudrail-integration-v1/3e354dd0-5018-11eb-be43-0e1c7f65113d",
            "StackName": "cloudrail-integration-v1",
            "StackStatus": "ROLLBACK_COMPLETE"
        }
    ]
}
