tests/knowledge/context/aws/scenarios/cross_version/vpc_endpoint/vpc-endpoint-eni/cfn-account-data/cloudrail-developer-idan/us-east-1/ec2-describe-nat-gateways.json
{
    "NatGateways": [
        {
            "CreateTime": "2021-05-06T08:59:04+00:00",
            "NatGatewayAddresses": [
                {
                    "AllocationId": "eipalloc-0e428478b0d71ae89",
                    "NetworkInterfaceId": "eni-0cc147a416fe8d533",
                    "PrivateIp": "10.21.97.194",
                    "PublicIp": "3.231.101.146"
                }
            ],
            "NatGatewayId": "nat-0033c1e8faa4dc946",
            "State": "available",
            "SubnetId": "subnet-07aafe557fd3ec501",
            "Tags": [
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Tier",
                    "Value": "Private"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Private-NATGW"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        }
    ]
}
