tests/knowledge/context/aws/scenarios/cross_version/vpc_endpoint/vpc-endpoint-eni/cfn-account-data/cloudrail-developer-idan/us-east-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-064b85595b19258f7",
            "OwnerId": "769993059587",
            "Tags": [],
            "VpcId": "vpc-0af8151fa6395fafa"
        },
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-0e40b59576522e813",
                    "NetworkAclId": "acl-0ca2ca688671f0067",
                    "SubnetId": "subnet-045b5665165f30a8b"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "192.168.100.128/25",
                    "Egress": false,
                    "PortRange": {
                        "From": 443,
                        "To": 443
                    },
                    "Protocol": "6",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": false,
            "NetworkAclId": "acl-0ca2ca688671f0067",
            "OwnerId": "769993059587",
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "testCfnStack"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:769993059587:stack/testCfnStack/34368b90-d179-11eb-af6a-1249719cb5f1"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "PrivateSubnetNacl"
                }
            ],
            "VpcId": "vpc-0af8151fa6395fafa"
        },
        {
            "Associations": [],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-2f7e4852",
            "OwnerId": "769993059587",
            "Tags": [],
            "VpcId": "vpc-c678b4bb"
        },
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-3cdc8b11",
                    "NetworkAclId": "acl-09ff95256b9520b86",
                    "SubnetId": "subnet-07aafe557fd3ec501"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-a39fdcf8",
                    "NetworkAclId": "acl-09ff95256b9520b86",
                    "SubnetId": "subnet-0f0665c6775ae109f"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-3ff5a212",
                    "NetworkAclId": "acl-09ff95256b9520b86",
                    "SubnetId": "subnet-04c3273bc3fe3ea35"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-f4bfe8d9",
                    "NetworkAclId": "acl-09ff95256b9520b86",
                    "SubnetId": "subnet-07af844489c3ba4ac"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-b87231e3",
                    "NetworkAclId": "acl-09ff95256b9520b86",
                    "SubnetId": "subnet-0a49ff61a4e99b94a"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-92ca89c9",
                    "NetworkAclId": "acl-09ff95256b9520b86",
                    "SubnetId": "subnet-062448d812f599972"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-09ff95256b9520b86",
            "OwnerId": "769993059587",
            "Tags": [],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        }
    ]
}
