tests/knowledge/context/aws/scenarios/cross_version/vpc_endpoint/vpc-endpoint-eni/cfn-account-data/cloudrail-developer-idan/us-east-1/ec2-describe-prefix-lists.json
{
    "PrefixLists": [
        {
            "Cidrs": [
                "52.216.0.0/15",
                "54.231.0.0/16",
                "3.5.0.0/19"
            ],
            "PrefixListId": "pl-63a5400a",
            "PrefixListName": "com.amazonaws.us-east-1.s3"
        },
        {
            "Cidrs": [
                "3.218.182.0/24",
                "3.218.180.0/23",
                "52.94.0.0/22",
                "52.119.224.0/20"
            ],
            "PrefixListId": "pl-02cd2c6b",
            "PrefixListName": "com.amazonaws.us-east-1.dynamodb"
        }
    ]
}
