tests/knowledge/context/aws/scenarios/cross_version/vpc_endpoint/vpc-endpoint-eni/cfn-account-data/cloudrail-developer-idan/us-east-1/ec2-describe-subnets.json
{
    "Subnets": [
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1d",
            "AvailabilityZoneId": "use1-az6",
            "AvailableIpAddressCount": 505,
            "CidrBlock": "10.21.108.0/23",
            "DefaultForAz": false,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": false,
            "OwnerId": "769993059587",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:769993059587:subnet/subnet-0f0665c6775ae109f",
            "SubnetId": "subnet-0f0665c6775ae109f",
            "Tags": [
                {
                    "Key": "Tier",
                    "Value": "Private"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Private-Subnet-d"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1c",
            "AvailabilityZoneId": "use1-az4",
            "AvailableIpAddressCount": 505,
            "CidrBlock": "10.21.106.0/23",
            "DefaultForAz": false,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": false,
            "OwnerId": "769993059587",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:769993059587:subnet/subnet-062448d812f599972",
            "SubnetId": "subnet-062448d812f599972",
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Tier",
                    "Value": "Private"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Private-Subnet-c"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1b",
            "AvailabilityZoneId": "use1-az2",
            "AvailableIpAddressCount": 506,
            "CidrBlock": "10.21.96.0/23",
            "DefaultForAz": false,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": false,
            "OwnerId": "769993059587",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:769993059587:subnet/subnet-07aafe557fd3ec501",
            "SubnetId": "subnet-07aafe557fd3ec501",
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Public-Subnet-b"
                },
                {
                    "Key": "Tier",
                    "Value": "Public"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1c",
            "AvailabilityZoneId": "use1-az4",
            "AvailableIpAddressCount": 507,
            "CidrBlock": "10.21.98.0/23",
            "DefaultForAz": false,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": false,
            "OwnerId": "769993059587",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:769993059587:subnet/subnet-07af844489c3ba4ac",
            "SubnetId": "subnet-07af844489c3ba4ac",
            "Tags": [
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Public-Subnet-c"
                },
                {
                    "Key": "Tier",
                    "Value": "Public"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1b",
            "AvailabilityZoneId": "use1-az2",
            "AvailableIpAddressCount": 504,
            "CidrBlock": "10.21.104.0/23",
            "DefaultForAz": false,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": false,
            "OwnerId": "769993059587",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:769993059587:subnet/subnet-0a49ff61a4e99b94a",
            "SubnetId": "subnet-0a49ff61a4e99b94a",
            "Tags": [
                {
                    "Key": "Tier",
                    "Value": "Private"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Private-Subnet-b"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1a",
            "AvailabilityZoneId": "use1-az1",
            "AvailableIpAddressCount": 122,
            "CidrBlock": "192.168.100.128/25",
            "DefaultForAz": false,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": false,
            "OwnerId": "769993059587",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:769993059587:subnet/subnet-045b5665165f30a8b",
            "SubnetId": "subnet-045b5665165f30a8b",
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "testCfnStack"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:769993059587:stack/testCfnStack/34368b90-d179-11eb-af6a-1249719cb5f1"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "PrivateSubnet"
                }
            ],
            "VpcId": "vpc-0af8151fa6395fafa"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1d",
            "AvailabilityZoneId": "use1-az6",
            "AvailableIpAddressCount": 507,
            "CidrBlock": "10.21.100.0/23",
            "DefaultForAz": false,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": false,
            "OwnerId": "769993059587",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:769993059587:subnet/subnet-04c3273bc3fe3ea35",
            "SubnetId": "subnet-04c3273bc3fe3ea35",
            "Tags": [
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Tier",
                    "Value": "Public"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-Public-Subnet-d"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        }
    ]
}
