tests/knowledge/context/aws/scenarios/cross_version/vpc_endpoint/vpc-endpoint-eni/cfn-account-data/cloudrail-developer-idan/us-east-1/ec2-describe-vpc-endpoints.json
{
    "VpcEndpoints": [
        {
            "CreationTimestamp": "2021-10-19T08:15:31.334000+00:00",
            "DnsEntries": [
                {
                    "DnsName": "vpce-05ffa660132bf34c1-7nm9yq3n.lambda.us-east-1.vpce.amazonaws.com",
                    "HostedZoneId": "Z7HUB22UULQXV"
                },
                {
                    "DnsName": "vpce-05ffa660132bf34c1-7nm9yq3n-us-east-1a.lambda.us-east-1.vpce.amazonaws.com",
                    "HostedZoneId": "Z7HUB22UULQXV"
                },
                {
                    "DnsName": "lambda.us-east-1.amazonaws.com",
                    "HostedZoneId": "Z02545031NA9CWZ9AO3V"
                }
            ],
            "Groups": [
                {
                    "GroupId": "sg-04a84a7f698f61b93",
                    "GroupName": "https-sg"
                }
            ],
            "NetworkInterfaceIds": [
                "eni-05ebfc69d689d6a6d"
            ],
            "OwnerId": "769993059587",
            "PolicyDocument": "{\n  \"Statement\": [\n    {\n      \"Action\": \"*\", \n      \"Effect\": \"Allow\", \n      \"Principal\": \"*\", \n      \"Resource\": \"*\"\n    }\n  ]\n}",
            "PrivateDnsEnabled": true,
            "RequesterManaged": false,
            "RouteTableIds": [],
            "ServiceName": "com.amazonaws.us-east-1.lambda",
            "State": "available",
            "SubnetIds": [
                "subnet-045b5665165f30a8b"
            ],
            "Tags": [],
            "VpcEndpointId": "vpce-05ffa660132bf34c1",
            "VpcEndpointType": "Interface",
            "VpcId": "vpc-0af8151fa6395fafa"
        }
    ]
}
