tests/knowledge/context/aws/scenarios/cross_version/vpc_endpoint/vpc-endpoint-eni/cfn-account-data/cloudrail-developer-idan/us-east-1/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "10.21.96.0/20",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-043bcfc7d145de37d",
                    "CidrBlock": "10.21.96.0/20",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-0793fa7d",
            "InstanceTenancy": "default",
            "IsDefault": false,
            "OwnerId": "769993059587",
            "State": "available",
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-idan"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-idan-VPC"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                }
            ],
            "VpcId": "vpc-0e9fcfd852ab17b75"
        },
        {
            "CidrBlock": "192.168.100.128/25",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-0d3e5262d27ac76fd",
                    "CidrBlock": "192.168.100.128/25",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-0793fa7d",
            "InstanceTenancy": "default",
            "IsDefault": false,
            "OwnerId": "769993059587",
            "State": "available",
            "Tags": [
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "TestVPC"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "testCfnStack"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:769993059587:stack/testCfnStack/34368b90-d179-11eb-af6a-1249719cb5f1"
                }
            ],
            "VpcId": "vpc-0af8151fa6395fafa"
        },
        {
            "CidrBlock": "172.31.0.0/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-cd9840a2",
                    "CidrBlock": "172.31.0.0/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-0793fa7d",
            "InstanceTenancy": "default",
            "IsDefault": true,
            "OwnerId": "769993059587",
            "State": "available",
            "VpcId": "vpc-c678b4bb"
        }
    ]
}
